--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/stack": "^6.3.11",
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.2",
+    "lottie-react-native": "^5.1.4",
     "react": "18.2.0",
     "react-native": "^0.70.6",
     "react-native-gesture-handler": "^2.8.0",
@@ -21,6 +22,8 @@
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-video": "^5.2.1",
+    "react-query": "^3.39.2",
     "react-redux": "^8.0.5"
   },
   "devDependencies": {
